Fix text align

--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -1,7 +1,3 @@
-body {
-  text-align:center;
-}
-
 @keyframes rotate {
   0% {
     transform:rotate(0);
